Bug 1328023 - Part 1. Don't use RangeUpdater except to composition transaction. r=masayuki, a=jcristau

Part 3 fix of bug 1310912 is incorrect for not composition transaction.  PlaceholderTransation is for saving and restoring current selection for undo. So we shouldn't use range updater to normal transaction.

Composition transaction can modify multiple nodes and it merges text node for ime into single text node. So if current selection is into IME text node, it might be failed to restore selection by UndoTransaction. So we need update selection by range updater to work UndoTransaction.

Also, CompositionTransaction::UndoTransaction will set selection after committed text. So at finally, selection will set correct position that composition transaction wants.

MozReview-Commit-ID: 1NcH32YoKPQ

--HG--
extra : source : 1e2993a59de6969076587cb8ee753e2984b6f5e9
extra : intermediate-source : e235e56f062a8bb2bfec3ea17fa098ecd422b476